Issue #938: Collapse the input format options
Fixes https://github.com/backdrop/backdrop-issues/issues/938

--- a/core/themes/seven/css/style.css
+++ b/core/themes/seven/css/style.css
@@ -805,6 +805,7 @@ td.checkbox .form-item input {
 }
 .filter-wrapper .fieldset-wrapper {
   padding: 0 6px;
+  margin-top: 45px;
 }
 .filter-wrapper .form-item,
 .filter-wrapper .filter-guidelines,
